--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "matancohen365/auto-rtl",
-  "description": "Simple class to rtl your themes",
+  "name": "matancohen365/r2l",
+  "description": "Right-to-Left your Left-to-Right assets in a push of a button",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -9,7 +9,11 @@
       "email": "matancohen365@gmail.com"
     }
   ],
-  "require": {},
+  "require": {
+    "ext-json": "*",
+    "ext-dom": "*",
+    "intervention/image": "^2.5"
+  },
   "require-dev": {
     "phpunit/phpunit": "^9"
   },
