--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,17 @@
     "ext-dom": "*",
     "intervention/image": "^2.5"
   },
-  "require-dev": {
-    "phpunit/phpunit": "^9"
-  },
   "autoload": {
     "classmap": [
       "src/"
     ]
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   }
 }
